fixing strftime error on comments

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,15 +4,15 @@
 
 {%block styles%}
     {{ super() }}
-    <link href="https://fonts.googleapis.com/css?family=Ranga" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Ranga" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cormorant+Upright" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Upright" rel="stylesheet"> -->
     <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
 {%endblock%}
 <!-- Content block -->
 {%block content%}
 
-    <h1 style="text-align:center; background-color:black; color:green;padding:80px;">MY PITCH PROJECT</h1>
+    <h1 style="color:green;padding:80px;">MY PITCH PROJECT</h1>
 
 <div class="container" style="padding-bottom: 20px;">
     <a href="{{url_for('main.new_pitch')}}" class="btn btn-success">Create pitch</a>
