--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,9 @@
 <!-- Content block -->
 {%block content%}
 
-    <h1 style="color:green;padding:80px;">MY PITCH PROJECT</h1>
+<div class="container-fluid">
+    <h1 class="jumbotron text-center" style="color:green;padding:80px;">MY PITCH PROJECT</h1>
+</div>
 
 <div class="container" style="padding-bottom: 20px;">
     <a href="{{url_for('main.new_pitch')}}" class="btn btn-success">Create pitch</a>
