changed styling to landing page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,16 +16,16 @@
     <h1 class="jumbotron text-center" style="color:green;padding:80px;">MY PITCH PROJECT</h1>
 </div>
 
-<div class="container" style="padding-bottom: 20px;">
+<div class="container text-center" style="padding-bottom: 20px;">
     <a href="{{url_for('main.new_pitch')}}" class="btn btn-success">Create pitch</a>
 </div>
 
-<div class="container" style= "font-family: 'Cormorant Upright', serif;">
+<div class="container-fluid" style= "font-family: 'Cormorant Upright', serif;">
     <div class="row">
         <div class="col-md-4">
             <div class="well well-lg">
                 <h3>Interview Pitches</h3>
-                <p>Want to have an interview in fews seconds about you.</p>
+                <p>Want to have an interview in fews seconds about you.</p><br>
                 <a href="{{url_for('main.interview_pitches')}}" class="btn btn-primary -center">View</a>
             </div>
         </div>
