--- a/app/templates/pitch.html
+++ b/app/templates/pitch.html
@@ -4,23 +4,24 @@
 
 {%block styles%}
     {{ super() }}
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Ranga" rel="stylesheet">
+    
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 {%endblock%}
 <!-- Content block -->
 {%block content%}
-<div class="container" style="font-family: 'Indie Flower', cursive;">
+<div class="container" >
     <div class="row">
         <h3>{{pitch.pitch_title}}</h3>
         <hr>
         <p>{{pitch.pitch_content}}</p>
         <span>
         <p>Posted on {{date}} by {{pitch.user.username| capitalize}}</p>
-        <a href="/pitch/{{pitch.id}}?like=1">
-            <i class="far fa-thumbs-up"></i>
-        </a>{{pitch.likes}} <a href="/pitch/{{pitch.id}}?dislike=1">
-            <i class="far fa-thumbs-down"></i>
-        </a>{{pitch.dislikes}}</span>
+        <a class="btn btn-primary" href="/pitch/{{pitch.id}}?like=1">
+            <i class="far fa-thumbs-up"></i> {{pitch.likes}}
+        </a>
+         <a class="btn btn-warning" href="/pitch/{{pitch.id}}?dislike=1">
+            <i class="far fa-thumbs-down"></i> {{pitch.dislikes}}
+        </a></span>
 
     </div>
     <div class="row">
