--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-light" role="navigation" style="margin-bottom:0; border-bottom: 1px solid;">
+<div class="navbar navbar-dark" role="navigation" style="margin-bottom:0; border-bottom: 1px solid;">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand"> One Minute Pitch </a>
+            <a href="/" class="navbar-brand">Pitch App</a>
         </div>
         <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
